# mTOR-nexus

./: .dockerignore  .gitignore  .mailmap  .pre-commit-config.yaml  .zenodo.json  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.repro  LICENSE  LICENSE-figures  Makefile  README.md  SECURITY.md  Snakefile  codemeta.json  docker-compose.yml  environment.yml  index.html  mkdocs.yml  pyproject.toml  refs.bib  zenodo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
ai-model-cards/: index.html
api-reference/: index.html
caveats/: index.html
data/: README.md  provenance.jsonl
data-sources/: index.html
disease-layer/: index.html
docs/: ai-model-cards.md  api-reference.md  caveats.md  data-sources.md  disease-layer.md  drug-discovery-layer.md  graph-schema.md  index.md  methodology.md  nomenclature-guards.md  preprint-status.md  release-runbook.md  reviewer-rebuttal.md  selectivity-datasheet.md  submission-checklist.md  tier-species-rubric.md  visualization.md
drug-discovery-layer/: index.html
figures/: checksums.sha256
graph-schema/: index.html
methodology/: index.html
nomenclature-guards/: index.html
preprint-status/: index.html
release-runbook/: index.html
reviewer-rebuttal/: index.html
scripts/: independent_reproduction.py  write_independent_reproduction_attestation.py  zenodo-deposit.sh  zenodo_release.py
search/: search_index.json
selectivity-datasheet/: index.html
submission-checklist/: index.html
tests/: conftest.py
tier-species-rubric/: index.html
visualization/: index.html
(+169 files in other folders)
